# MidiMediator

./: .gitignore  LICENSE.txt  README.md
src/: CMakeLists.txt  CMakeSettings.json  launch.vs.json
src/MidiMediator/: Application.cpp  Application.hpp  CMakeLists.txt  CommandMap.cpp  CommandMap.hpp  Configuration.cpp  Configuration.hpp  InputMidiDevice.cpp  InputMidiDevice.hpp  InputMidiPort.cpp  InputMidiPort.hpp  MessageDirection.hpp  MidiDevice.cpp  MidiDevice.hpp  MidiDeviceMapper.cpp  MidiDeviceMapper.hpp  MidiDeviceMapping.cpp  MidiDeviceMapping.hpp  MidiMediator.json  MidiMediator.linux.json  MidiMessage.cpp  MidiMessage.hpp  MidiPort.cpp  MidiPort.hpp  OutputMidiDevice.cpp  OutputMidiDevice.hpp  OutputMidiPort.cpp  OutputMidiPort.hpp  RevolvingCollection.cpp  RevolvingCollection.hpp  main.cpp  pch.cpp  pch.hpp  targetver.hpp  vcpkg.json
